Reduce the use of `CollectionsExt` when Java 11 methods can do the work.